fix: adjust end-point register